--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9"
